--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             } else if (/huawei/i.test(userAgent)) {
                 window.location.href = "https://appgallery.huawei.com/app/C107642113";
             } else {
-                window.location.href = "https://yourfallbackurl.com";  // optional fallback URL
+                window.location.href = "https://www.infinitiafrica.co/business-automations/";  // optional fallback URL
             }
         }
     </script>
