--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 window.location.href = "https://appgallery.huawei.com/app/C107642113";
             } else {
                 // You can add a fallback URL or a message for unsupported devices here if needed
-                document.body.innerHTML = "https://www.infinitiafrica.co/business-automations/";
+                window.location.href = "https://www.infinitiafrica.co/business-automations/";
             }
         }
     </script>
